@@ -1,4 +1,8 @@
-2004-11-39  Paul Brossier <piem@altern.org>
+2004-12-03  Paul Brossier <piem@altern.org>
+	* src/{mathutils,pitchyin}.h: got rid of some shadowed declarations
+	* plugins/puredata: first puredata plugin attempt added
+
+2004-11-30  Paul Brossier <piem@altern.org>
 	* configure.ac: added -lmx on macosx
 	* python/aubiocut: seeks for local minima before peak
 	                   added zero crossing search
